app/assets/stylesheets/user_dashboard.css
.userDashboard{
  overflow: scroll;
}

.userInfoBody{
  display:flex;
  justify-content: center;
  min-height: 100vh;
  min-width: 100%;
  background: black url("https://s3.amazonaws.com/bruby/site_images/hazybeer.jpg") no-repeat fixed;
  background-size: cover;
}

.userInfoWrapper{
  background-color: rgba(0,0,0,.5);
  border-right: 1px solid #8080804d;
  border-left: 1px solid #8080804d;
  width: 70vw;
  max-width: 800px;
  min-width: 450px;
}

.welcomeBackText{
  text-align: center;
  font-size: 4vw;
}

.statsWrapper{
  display: flex;
  flex-wrap: nowrap;
  flex-direction: column;
  /* border: 1px solid black; */
  width: 22vw;
  color: white;
  margin: 20px;
}

.userContainer{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.statsContainer{
  display:flex;
  flex-direction: row;
  justify-content: center;
  max-width: 100%;
}

.big{
  font-size: 9em;
  text-align: center;
  height: 130px;
  max-width: 300px;
  border-bottom: 5px solid white;
  display: flex;
  justify-content: center;
  align-items: center;
}

.description{
  text-align: center;
  font-size: 1.5em;
  padding-bottom: 10px;
  max-width: 300px;
}

.brewingRecap{
  font-size: 2em;
}

.recapContainer{
  width:47vw;
  text-align:left;
  max-width: 100%;
  padding: 25px;
}

.beerName{
  text-align: left;
  font-weight: 900;
  padding-left: 25px;
}

